<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    tools:context=".BoardingData">

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	
	    <TextView
	        android:id="@+id/view_passenger_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/view_passenger_name" />
	
	    <EditText
	        android:id="@+id/edit_passenger_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/edit_passenger_name"
	        android:inputType="textCapCharacters"
	        android:maxLength="20" />
	
	    <TextView
	        android:id="@+id/view_route"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/view_route" />
	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	
	        <Spinner
	            android:id="@+id/spinner_from"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            tools:listitem="@android:layout/simple_spinner_item" />
	
	        <Spinner
	            android:id="@+id/spinner_to"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            tools:listitem="@android:layout/simple_spinner_item" />
	
	    </LinearLayout>
	
	    <TextView
	        android:id="@+id/view_flight"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/view_flight" />
	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	
	        <Spinner
	            android:id="@+id/spinner_carrier"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            tools:listitem="@android:layout/simple_spinner_item" />
	
	        <EditText
	            android:id="@+id/edit_flight_number"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10" 
	            android:hint="@string/edit_flight_number"
	        	android:inputType="number"
	        	android:maxLength="4">
	            <requestFocus />
	        </EditText>
	
	    </LinearLayout>
	
	    <TextView
	        android:id="@+id/view_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/view_date" />
	    
	    <DatePicker
	        android:id="@+id/date_picker"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal" />

	    <TextView
	        android:id="@+id/view_generator"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/view_generator" />

	    <Spinner
	        android:id="@+id/spinner_format"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        tools:listitem="@android:layout/simple_spinner_item" />
	
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="generate"
	        android:text="@string/button_generate" />
	    
	    <TextView
	        android:id="@+id/view_gate_operations"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/view_gate" />
	    
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="gateEnable"
	        android:text="@string/button_gate_enable" />
	    
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="gateDisable"
	        android:text="@string/button_gate_disable" />
	    
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="gateToggle"
	        android:text="@string/button_gate_toggle" />

	    <TextView
	        android:id="@+id/view_gate_gey"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/view_gate_key" />
	    
	    <EditText
	        android:id="@+id/edit_gate_key"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/edit_gate_key"
	        android:inputType="text"
	        android:maxLength="20" />
        
	</LinearLayout>
</ScrollView>